# password-manager

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  config_test.py  crypto.py  jwt.py  security.py
backend/app/db/: base.py  session.py  session_test.py
backend/app/dependencies/: auth.py
backend/app/models/: secret.py  user.py
backend/app/routers/: auth.py  secrets.py
backend/app/schemas/: secret.py  user.py
backend/tests/: conftest.py  test_auth.py
frontend/: .gitignore  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts  secrets.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: Footer.tsx  SecretForm.tsx  SecretFormModal.tsx  SecretModal.tsx  SecretsTable.tsx
frontend/src/components/styles/: Footer.scss  SecretForm.scss  SecretFormModal.scss  SecretModal.scss  SecretsTable.scss
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/pages/styles/: Dashboard.scss  Login.scss
