[project]
name = "password-manager-backend"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "psycopg2-binary",
  "pydantic",
  "pydantic-settings",
  "email-validator",
  "bcrypt",
  "python-jose",
  "python-dotenv",
  "python-multipart",
  "cryptography"
]


[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "httpx"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
